tests/good/typing/023-plus-int-var-int.clap
val x = 42
val y = x + 5

