tests/bad/lexical/093-where-no-end.clap
val x = 42 where val z = 2
